Refactor error handling and improve response formatting.